# python

./: .bla.py.swp  .gitignore  main.py  pyproject.toml
00_fluent_python/: card_deck.py
01_isinstance/: isinstance.py
02_parallel_processing/: avg_price_each_reader.py  generate_data.py  main.py  parallel_singular_param.py  parallelize_section.py  simple_genre_features.py  single_thread.py  starmap.py
03_functools/: partial.py
04_get_set_del_attr/: .function_get.py.swp  does_not_exist.py  function_get.py  person.py
05_callable/: .callable.py.swp  callable.py
06_memory/: main.py
30_unittesting/: calc.py  test_calc.py  test_employee.py
31_logging_python/: employee.py  employee_dois.py  experiment_logging_outputs.py  intro.py  logging_levels.md  sample.py
32_exception_handling/: db.py  error-handling.py
34_abstract_methods/: .callsuper.py.swp  callsuper.py
35_subprocess_call/: copy_file.sh
36_garbage_collector/: example.py
37_flask/: .gitignore
38_plotnine_animated/: learn.py  toy.ipynb  toy.py
39_yield/: yield.py
40_signal_handler_keyboard_interrupt/: test.py
41_classvariables/: binit.py  employee.py  init.py
42_decorator_global_parameters/: globals.py  run.sh  soglobal.py
44_uv/: README.md  tuto.md
44_uv/anotherversionuv/: main.py  pyproject.toml
44_uv/datascience/: .main.py.swp  README.md  main.py  pyproject.toml  requirements.txt
44_uv/datascience/.ipynb_checkpoints/: uvtest-checkpoint.ipynb
45_template/: .one.py.swp  main.py  pyproject.toml
46_pydantic/: combine.py  constrants.py  custom.py  one.py  optinal.py
(+54 files in other folders)
